--- a/demo-mjml.html
+++ b/demo-mjml.html
@@ -21,7 +21,8 @@
     <!-- Plugins -->
     <!-- <script src="./js/grapesjs-plugin-ckeditor.min.js"></script> -->
     <script src="./js/grapesjs-plugin-ckeditor/index.js"></script>
-    <script src="https://unpkg.com/grapesjs-mjml@1.0.2"></script>
+    <!-- <script src="https://unpkg.com/grapesjs-mjml@1.0.2"></script> -->
+    <script src="./js/mjml/index.js"></script>
 
   </head>
   <style>
@@ -194,6 +195,9 @@
         plugins: ['grapesjs-mjml', 'grapesjs-plugin-ckeditor'],
         pluginsOpts: {
           'grapesjs-plugin-ckeditor': {
+            onToolbar: el => {
+              el.style.minWidth = '350px';
+            },
             options: {
               startupFocus: true,
               extraAllowedContent: '*(*);*{*}', // Allows any class and any inline style
