Add new demo link

--- a/index.html
+++ b/index.html
@@ -97,11 +97,16 @@
         <a href="./demo.html" class="btn try btn-rnd">Webpage Demo</a>
         <a href="./demo-newsletter-editor.html" class="btn try btn-rnd">Newsletter Demo</a>
         <a href="./demo-mjml.html" class="btn try btn-rnd">MJML Demo</a>
+        <div></div>
+        <a href="https://studio.grapesjs.com" class="btn try btn-rnd btn-studio">
+            <img src="./img/logos/grapesjs-logo.svg" height="40"/>
+            Try GrapesJS Studio <small>(alpha)</small>
+        </a>
         <div class="device-small">Sorry but your device is too small for the editor. See below for more information</div>
       </div>
 
       <div id="native-carbon"></div>
-      <!-- <script async type="text/javascript" src="./js/carbon-v2.js"></script> -->
+      <script async type="text/javascript" src="./js/carbon-v2.js"></script>
 
       <div class="bann-cont-c">
         <div class="bann-cont">
