--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           border-radius: 3px;
           padding: 30px 20px;
           margin: 150px auto 0px;
-          background-color: #d983a6;
+          background-color: #b2b2b2;
           box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
           color:rgba(255,255,255,0.75);
           font: caption;
