--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>GrapesJS Demo - Free Open Source Website Page Builder</title>
     <meta content="Best Free Open Source Responsive Websites Builder" name="description">
     <link rel="stylesheet" href="stylesheets/toastr.min.css">
-    <link rel="stylesheet" href="stylesheets/grapes.min.css?v0.21.8">
+    <link rel="stylesheet" href="stylesheets/grapes.min.css?v0.21.9">
     <link rel="stylesheet" href="stylesheets/grapesjs-preset-webpage.min.css">
     <link rel="stylesheet" href="stylesheets/tooltip.css">
     <link rel="stylesheet" href="stylesheets/demos.css?v3">
@@ -13,7 +13,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/toastr.min.js"></script>
-    <script src="js/grapes.min.js?v0.21.8"></script>
+    <script src="js/grapes.min.js?v0.21.9"></script>
     <script src="https://unpkg.com/grapesjs-preset-webpage@1.0.2"></script>
     <script src="https://unpkg.com/grapesjs-blocks-basic@1.0.1"></script>
     <script src="https://unpkg.com/grapesjs-plugin-forms@2.0.5"></script>
@@ -1389,7 +1389,7 @@
           '<div class="gjs-sm-sector-title"><span class="icon-settings fa fa-cog"></span> <span class="gjs-sm-sector-label">Settings</span></div>' +
           '<div class="gjs-sm-properties" style="display: none;"></div></div>');
         var traitsProps = traitsSector.find('.gjs-sm-properties');
-        traitsProps.append($('.gjs-trt-traits'));
+        traitsProps.append($('.gjs-traits-cs'));
         $('.gjs-sm-sectors').before(traitsSector);
         traitsSector.find('.gjs-sm-sector-title').on('click', function(){
           var traitStyle = traitsProps.get(0).style;
