--- a/packages/cli/index.html
+++ b/packages/cli/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title><%= title %></title>
-    <link href="<%= pathGjsCss ? pathGjsCss : 'https://unpkg.com/grapesjs@' + gjsVersion + '/dist/css/grapes.min.css' %>" rel="stylesheet">
+    <link
+      href="<%= pathGjsCss ? pathGjsCss : 'https://unpkg.com/grapesjs@' + gjsVersion + '/dist/css/grapes.min.css' %>"
+      rel="stylesheet"
+    />
     <script src="<%= pathGjs ? pathGjs : 'https://unpkg.com/grapesjs@' + gjsVersion %>"></script>
     <style>
       body,
@@ -14,14 +17,13 @@
     </style>
   </head>
   <body>
-    <div id="gjs" style="height:0px; overflow:hidden">
-      <div style="margin:100px 100px 25px; padding:25px; font:caption">
-        This is a demo content generated from <b>GrapesJS CLI</b>.
-        For the development, you should create a _index.html template file (might be a copy of this one) and on the next server start
-        the new file will be served, and it will be ignored by git.
+    <div id="gjs" style="height: 0px; overflow: hidden">
+      <div style="margin: 100px 100px 25px; padding: 25px; font: caption">
+        This is a demo content generated from <b>GrapesJS CLI</b>. For the development, you should create a _index.html
+        template file (might be a copy of this one) and on the next server start the new file will be served, and it
+        will be ignored by git.
       </div>
     </div>
-
 
     <script type="text/javascript">
       window.onload = () => {
@@ -34,7 +36,7 @@
           fromElement: true,
           plugins: ['<%= name %>'],
         });
-      }
+      };
     </script>
   </body>
 </html>
